# softpack-builder

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: debug.yml  dev.yml  preview.yml  release.yml
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
docs/guides/: how-to-manually-start-a-build.md
docs/how-to-guides/: how-to-start-a-build.md
docs/reference/: api.md  cli.md  openapi.json  rest.md
docs/topics/: design.md
docs/tutorials/: getting_started.md
guides/how-to-start-a-build/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/rest/: index.html
search/: search_index.json
softpack_builder/: __init__.py  app.py  artifacts.py  build_flow.py  cli.py  config.py  container.py  deployments.py  environment.py  logger.py  main.py  modulefile.py  package.py  plugin.py  serializable.py  service.py  shell.py  singularity.py  softpack_builder.py  spack.py  spack_api.py  url.py  utils.py
softpack_builder/conf/: config.yml
softpack_builder/config/: models.py  settings.py
softpack_builder/config/conf/: config.yml
tests/: __init__.py  conftest.py  test_app.py  test_deployments.py  test_environment.py  test_main.py  test_service.py  test_softpack_builder.py
tests/data/specs/: argon.yml  test-env.yml  zirconium.yml
topics/design/: index.html
tutorials/getting_started/: index.html
